# skye

./: .clang-format  .clang-tidy  .codespellrc  .dockerignore  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  HACKING.md  README.md  conanfile.py  conanfile.txt  database.db  vcpkg.json
.github/workflows/: ci.yml  httpmicroservice-AutoDeployTrigger-af7b2a9c-55f5-47a5-85e3-779fa16b8ace.yml  sanitizer.yaml  test.yaml  tidy.yaml
bench/: CMakeLists.txt  README.md  bench_format.cpp  bench_session.cpp
benchmarks/: CMakeLists.txt  bench_format.cpp  bench_session.cpp
ci/: build_sanitizer.sh  build_test.sh  build_tidy.sh
cli/: CMakeLists.txt  cli.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
examples/: CMakeLists.txt  README.md  basic.cpp  database.cpp  database.hpp  echo.cpp  example.cpp  hello.cpp  producer.cpp  threaded.cpp  threadpool.cpp
include/: httpappserver.hpp  httpmicroservice.hpp  skye.hpp
include/httpmicroservice/: format.hpp  service.hpp  session.hpp  types.hpp
include/skye/: format.hpp  service.hpp  session.hpp  types.hpp  utility.hpp
src/: httpappserver.cpp  httpmicroservice.cpp  server.cpp  service.cpp
test/: CMakeLists.txt  test.cpp  test.hpp  test_fuzzer.cpp  test_integration.cpp  test_session.cpp
tests/: CMakeLists.txt  mock_sock.hpp  test.cpp  test.hpp  test_fuzzer.cpp  test_integration.cpp  test_service.cpp  test_session.cpp
tools/: build_coverage.sh  build_gcov.sh  build_sanitizer.sh  build_test.sh  build_tidy.sh  clang-jammy.profile  database-scratch.dockerfile  io_uring.dockerfile  jammy.dockerfile  openapi-database.yaml  openapi-echo.yaml  openapi-hello.yaml  openapi.yaml  sqlite3_schema.py  standalone.conf  test_openapi.py
